Fix resetting data on logout, add username on login.
